Fixed the tour-section showing white space at the end , by setting margin-up to -1px, Added new footer component, home page is almost complete except for some minor changes needed in few places

--- a/src/components/TourSection.css
+++ b/src/components/TourSection.css
@@ -1,14 +1,12 @@
 section#tour-section {
-  /* height: 60px !important;
-  margin: 0 !important;
-  padding: 0 !important; */
+  padding: 0rem 0 !important;
+  margin: -1rem 0;
 }
 
 .tour-img {
   width: 100%;
-  /* height: 50px !important; */
+  cursor: pointer;
 }
 .tour-img img {
   width: 100%;
-  /* height: 700px; */
 }
